haskell-lens (3.9.0.2-3) UNRELEASED; urgency=low

  * Disable an unreliable test that fails on hurd-i386 and kfreebsd-i386 due
    to slight differences in floating-point representation.

 -- Colin Watson <cjwatson@debian.org>  Mon, 17 Jun 2013 21:29:20 +0100

haskell-lens (3.9.0.2-2) unstable; urgency=low

  * Enable compat level 9

 -- Joachim Breitner <nomeata@debian.org>  Fri, 24 May 2013 12:51:16 +0200

haskell-lens (3.9.0.2-1) experimental; urgency=low

  * New upstream version.

 -- Clint Adams <clint@debian.org>  Mon, 01 Apr 2013 21:46:57 -0400

haskell-lens (3.8.7.3-1) experimental; urgency=low

  * New upstream version.

 -- Clint Adams <clint@debian.org>  Sun, 10 Mar 2013 22:08:12 -0400

haskell-lens (3.8.5-1) experimental; urgency=low

  * New upstream version.

 -- Clint Adams <clint@debian.org>  Sat, 09 Feb 2013 12:36:35 -0500

haskell-lens (3.7.1.2-2) experimental; urgency=low

  * Fix test suite dependencies (added missing test-framework-quickcheck2,
    removed not needed upper bounds)

 -- Joachim Breitner <nomeata@debian.org>  Fri, 01 Feb 2013 11:46:18 +0100

haskell-lens (3.7.1.2-1) experimental; urgency=low

  * New upstream version.

 -- Clint Adams <clint@debian.org>  Mon, 31 Dec 2012 17:31:04 -0500

haskell-lens (3.6-1) experimental; urgency=low

  * New upstream version.

 -- Clint Adams <clint@debian.org>  Sun, 25 Nov 2012 20:24:38 -0500

haskell-lens (3.2-1) experimental; urgency=low

  * New upstream version.

 -- Clint Adams <clint@debian.org>  Sun, 11 Nov 2012 00:52:47 -0500

haskell-lens (3.1-1) experimental; urgency=low

  * New upstream version.

 -- Clint Adams <clint@debian.org>  Sun, 04 Nov 2012 09:43:19 -0500

haskell-lens (3.0.5-1) experimental; urgency=low

  [ Joachim Breitner ]
  * Depend on haskell-devscripts 0.8.13 to ensure this package is built
    against experimental
  * Bump standards version, no change

  [ Clint Adams ]
  * New upstream version.

 -- Clint Adams <clint@debian.org>  Mon, 29 Oct 2012 15:50:56 -0400
