@@ -2,6 +2,8 @@ haskell-lens (3.9.0.2-3) UNRELEASED; urgency=low
 
   * Disable an unreliable test that fails on hurd-i386 and kfreebsd-i386 due
     to slight differences in floating-point representation.
+  * Disable the hunit and properties test suites on sparc, since they
+    require SMP support via the RTS -N option.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 17 Jun 2013 21:29:20 +0100
 
